--- a/app/views/template/about.html.erb
+++ b/app/views/template/about.html.erb
@@ -1,49 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Responsive Shop Theme">
 <meta name="keywords" content="responsive, retina ready, shop bootstrap template, html5, css3" />
 <meta name="author" content="KingStudio.ro">
-
 <!-- favicon -->
 <link rel="icon" href="images/favicon.png">
 <!-- page title -->
-<title>inCart - Responsive Shop Theme</title>
-<!-- bootstrap css -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<!-- css -->
-<link href="css/style.css" rel="stylesheet">
+<!-- <title>inCart - Responsive Shop Theme</title>
+ --><!-- bootstrap css -->
+<!-- <link href="css/bootstrap.min.css" rel="stylesheet">
+ --><!-- css -->
+<!-- <link href="css/style.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
 <link href="css/owl.carousel.css" rel="stylesheet">
-<link href="css/owl.theme.css" rel="stylesheet">
+<link href="css/owl.theme.css" rel="stylesheet"> -->
 <!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
+<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href='fonts/FontAwesome.otf' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="css/linear-icons.css">
-
+<link rel="stylesheet" href="css/linear-icons.css"> -->
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-
 </head>
-
 <body>
-
-<!-- preloader -->
-<div id="preloader">
-    <div class="spinner spinner-round"></div>
-</div>
+<!-- <div class="spinner spinner-round"></div>
+</div> -->
 <!-- / preloader -->
-
 <!-- header -->
 <header>
     <div class="top-menu top-menu-inverse">
@@ -52,8 +42,20 @@
                 <span class="left">Free Worldwide shipping on orders over <span class="text-primary"><strong>$100</strong></span>!</span>
                 <span class="right">
                     <a href="my-account.html"><i class="lnr lnr-user"></i> <span>My Account</span></a>
-                    <a href="login-register.html"><i class="lnr lnr-lock"></i> <span>Login / Register</span></a>
-                    <a href="shopping-cart.html"><i class="lnr lnr-cart"></i> <span>Shopping Cart (2)</span></a>
+    <% if user_signed_in? %>
+        <%= link_to "Sign Out  ", destroy_user_session_path, method: :delete %>
+        <%= current_user.email %>
+
+    <% else %>
+    
+        <%= link_to "Sign In      ", new_user_session_path %>
+
+
+        <%= link_to "Sign Up", new_user_registration_path %>
+    
+        <% end %>
+                    
+                    <a href="/shopping-cart"><i class="lnr lnr-cart"></i> <span>Shopping Cart (2)</span></a>
                 </span>
             </p>
         </div><!-- / container -->
@@ -67,67 +69,46 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
+                <a class="navbar-brand" href="/index"><%= image_tag('logo.png') %></a>
             </div><!-- / navbar-header -->
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a></li>
+                    <li class="active"><a href="/">Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shop <span class="caret"></span></a>
                         <ul class="dropdown-menu pulse animated">
-                            <li><a href="shop-right.html">Shop: Right Sidebar</a></li>
-                            <li><a href="shop-left.html">Shop: Left Sidebar</a></li>
-                            <li><a href="shop-full.html">Shop: Full Width</a></li>
+                            <!--<li><a href="shop-right.html">Shop: Right Sidebar</a></li> -->
+                            <!--<li><a href="shop-left.html">Shop: Left Sidebar</a></li>-->
+                            <!-- <li><a href="shop-full.html">Shop: Full Width</a></li> -->
                             <li><a href="shop-filter.html">Shop: Filterable</a></li>
                             <li><a href="single-product.html">Single Product</a></li>
-                            <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
+                            <li><a href="/shopping-cart">Shopping Cart</a></li>
+                            <!-- <li><a href="checkout.html">Checkout</a></li> -->
                         </ul>
                     </li>
-                    <li class="active"><a href="about.html">About</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Infos <span class="caret"></span></a>
                         <ul class="dropdown-menu pulse animated">
-                            <li><a href="login-register.html">Login / Register</a></li>
                             <li><a href="my-account.html">My Account</a></li>
-                            <li><a href="single-post.html">Single Post</a></li>
                             <li><a href="faq.html">FAQ</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="404.html">404 Page</a></li>
-                            <li><a href="components.html">Components</a></li>
                         </ul>
                     </li>
                     <li class="dropdown w-image">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="images/eng.png" alt=""> <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag('eng.png') %> <span class="caret"></span></a>
                         <ul class="dropdown-menu pulse animated">
-                            <li><a href="#"><img src="images/fr.png" alt=""> FR</a></li>
-                            <li><a href="#"><img src="images/de.png" alt=""> DE</a></li>
-                            <li><a href="#"><img src="images/es.png" alt=""> ES</a></li>
+                            <li><a href="#"><%= image_tag('fr.png') %> FR</a></li>
+                            <li><a href="#"><%= image_tag('de.png') %> DE</a></li>
+                            <li><a href="#"><%= image_tag('es.png') %> ES</a></li>
                         </ul>
                     </li>    
                 </ul>
             </div><!--/ nav-collapse -->
         </div><!-- / container -->
     </nav><!-- / navbar -->
-
-    <div id="page-header" class="about">
-        <div class="container">
-            <div class="page-header-content text-center">
-                <div class="page-header wsub">
-                    <h1 class="page-title fadeInDown animated first">About</h1>
-                </div><!-- / page-header -->
-                <p class="slide-text fadeInUp animated second">Your page's description goes here...</p>
-            </div><!-- / page-header-content -->
-        </div><!-- / container -->
-    </div><!-- / page-header -->
-
-</header>
 <!-- / header -->
-
 <!-- content -->
-
 <!-- about -->
 <section id="about">
     <div class="container">
@@ -135,114 +116,69 @@
             <div class="page-header text-center space-top-30">
                 <h3>About the Shop</h3>
             </div><!-- / page-header -->
-            <p class="large-p">Pellentesque varius, dolor id pulvinar aliquam, orci nisi lobortis mauris, in scelerisque risus sem sit amet purus. Pellentesque pharetra sem ac porttitor feugiat. Phasellus ac elementum sapien. Sed rutrum pharetra tincidunt. Sed vel magna et est porta ultricies. Morbi elementum blandit erat quis iaculis. Aliquam commodo, felis et blandit sagittis, lacus tellus interdum leo, quis viverra ligula nulla ut purus. Ut feugiat leo ipsum, ac mollis ligula egestas auctor. Proin dictum eros orci, quis fermentum nulla volutpat non. Pellentesque dolor nibh, sagittis ut pulvinar quis, vulputate non nunc. Sed arcu urna, blandit quis felis at, rutrum varius ligula. Etiam ut ornare sapien, in ultrices diam. Sed in turpis id sem rhoncus vestibulum.</p>
+            <p class="large-p"></p>
             <p class="large-p">Vestibulum maximus laoreet enim ut blandit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Curabitur posuere est ipsum, eu semper tellus sagittis ultricies. Pellentesque eget lorem tortor. Maecenas sit amet dignissim augue, non faucibus arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="page-header text-center space-top-30">
                 <h3>About the Team</h3>
             </div><!-- / page-header -->
             <p class="large-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dictum eget dolor ut venenatis. Mauris volutpat non nibh et vulputate. Nullam purus velit, feugiat id diam eu, sodales porta tellus. Nam a lacinia ante. Nulla ex purus, egestas in tempus ac, venenatis a metus. Sed pharetra ut turpis at mollis. Nunc ornare interdum libero, eu sodales magna posuere et. Vestibulum at orci elit. Nunc hendrerit urna.</p>
         </div><!-- / text-wrap -->
-        <div class="row">
-            <div class="col-sm-6 team">
-                <img src="images/about-img.jpg" alt="">
-                <div class="page-header wsub text-left space-top">
-                    <h5>John Doe - CEO</h5>
-                </div><!-- / page-header -->
-                <p class="large-p">Donec a porttitor elit, pulvinar malesuada ligula. Etiam auctor tristique nisl sed tempor. Phasellus vehicula orci eu dictum fringilla. Fusce in enim et tellus auctor dapibus. In hac habitasse platea dictumst.</p>
-            </div>
-            <div class="col-sm-6 team">
-                <img src="images/about-img.jpg" alt="">
-                <div class="page-header wsub text-left space-top">
-                    <h5>Jasmine Doe - Designer</h5>
-                </div><!-- / page-header -->
-                <p class="large-p">Curabitur dolor nunc, condimentum eget dolor et, molestie aliquet ex. Sed feugiat massa vitae mollis feugiat. Sed eu ligula est. Curabitur eleifend dignissim interdum. laoreet enim ut blandit.</p>
-            </div>
-        </div><!-- / row -->
     </div><!-- / container -->
 </section>
 <!-- / about -->
-
 <section id="testimonials">
     <div class="container">
         <div class="page-header text-center">
-            <h3>Testimonials</h3>
+            <h3>MOTHER FUCKING BEST TEAM</h3>
         </div><!-- / page-header -->
         <div class="row">
             <!-- testimonial -->
             <div class="col-sm-4">
                 <div class="testimonial text-center">
-                    <img src="images/testimonial.jpg" alt="">
-                    <h5>Johanna Doe</h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
+                    <%= image_tag('testimonial.jpg') %>
+                   <h5>Irina</h5>
+                    <p>Web Developer, front end, but also puissant free-bugger.</p>
                 </div>
             </div><!-- / col-md-4 -->
             <!-- / testimonial -->
-
             <!-- testimonial -->
             <div class="col-sm-4">
                 <div class="testimonial text-center">
-                    <img src="images/testimonial.jpg" alt="">
-                    <h5>James Doe</h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
+                    <%= image_tag('testimonial.jpg') %>
+                    <h5>Victor</h5>
+                    <p>Web Developer, but also Super patient man.</p>
                 </div>
             </div><!-- / col-md-4 -->
             <!-- / testimonial -->
-
             <!-- testimonial -->
             <div class="col-sm-4">
                 <div class="testimonial text-center">
-                    <img src="images/testimonial.jpg" alt="">
-                    <h5>Missy Doe</h5>
-                    <p>Quisque sit amet libero purus. Nulla a dignissim quam. In hac habitasse platea dictumst.</p>
+                    <%= image_tag('testimonial.jpg') %>
+                    <h5>Pauline</h5>
+                    <p>UX, UI designer, but also fucking fdp power.</p>
                 </div>
             </div><!-- / col-md-4 -->
             <!-- / testimonial -->
-
         </div><!-- / row -->
     </div><!-- / container -->
 </section>
-
 <!-- brands carousel -->
-<section id="brands" class="primary-background">
-    <div class="page-header text-center">
-        <h3>Brands</h3>
-    </div><!-- / page-header -->
-    <div class="container">
-        <div id="brands-carousel" class="owl-carousel">
-            <div class="item"><img src="images/brand1.png" alt=""></div>
-            <div class="item"><img src="images/brand2.png" alt=""></div>
-            <div class="item"><img src="images/brand3.png" alt=""></div>
-            <div class="item"><img src="images/brand4.png" alt=""></div>
-            <div class="item"><img src="images/brand5.png" alt=""></div>
-            <div class="item"><img src="images/brand6.png" alt=""></div>
-            <div class="item"><img src="images/brand7.png" alt=""></div>
-            <div class="item"><img src="images/brand8.png" alt=""></div>
-            <div class="item"><img src="images/brand9.png" alt=""></div>
-            <div class="item"><img src="images/brand10.png" alt=""></div>
-        </div>
-        <!-- / brands carousel -->
-    </div><!-- / container -->
-</section>
 <!-- / about -->
-
 <!-- / content -->
-
 <!-- footer -->
 <footer class="light-footer">
     <div class="widget-area">
         <div class="container">
             <div class="row">
-
                 <div class="col-sm-6 col-md-4 widget">
                     <div class="about-widget">
                         <div class="widget-title-image">
-                            <img src="images/logo.png" alt="">
+                            <%= image_tag('logo.png') %>
                         </div>
                         <p>Praesent sed congue ipsum. Nullam tempus ornare est, non aliquet velit tincidunt elementum. Nulla at risus ut felis eleifend. Nulla non lacinia. Integer est lacus, ultricies sed feugiat id, maximus nec.</p>
                     </div><!-- / about-widget -->
                 </div><!-- / widget -->
                 <!-- / first widget -->
-
                 <div class="col-sm-6 col-md-2 widget">
                     <div class="widget-title">
                         <h4>Brands</h4>
@@ -266,7 +202,6 @@
                     </div>
                 </div><!-- / widget -->
                 <!-- / second widget -->
-
                 <div class="col-sm-6 col-md-2 widget">
                     <div class="widget-title">
                         <h4>Support</h4>
@@ -290,7 +225,6 @@
                     </div>
                 </div><!-- / widget -->
                 <!-- / third widget -->
-
                 <div class="col-sm-6 col-md-4 widget">
                     <div class="widget-title">
                         <h4>Get in Touch</h4>
@@ -318,7 +252,6 @@
                     </div><!-- / contact-widget -->
                 </div><!-- / widget -->
                 <!-- / fourth widget -->
-
             </div><!-- / row -->
         </div><!-- / container -->
     </div><!-- / widget-area -->
@@ -328,23 +261,21 @@
                     <p>© 2016 - <strong>inCart</strong> - Responsive Shop Theme.</p>
                 </div>
                 <span class="pull-right">
-                    <img src="images/visa.png" alt="">
-                    <img src="images/mastercard.png" alt="">
-                    <img src="images/discover.png" alt="">
-                    <img src="images/paypal.png" alt="">
+                    <%= image_tag('visa.png') %>
+                    <%= image_tag('mastercard.png') %>
+                    <%= image_tag('discover.png') %>
+                    <%= image_tag('paypal.png') %>
                 </span>
         </div><!-- / container -->
     </div><!-- / footer-info -->
 </footer>
 <!-- / footer -->
-
 <!-- javascript -->
-<script src="js/jquery.min.js"></script>
+<!-- <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-
+<script src="js/jquery.easing.min.js"></script> -->
 <!-- sliders -->
-<script src="js/owl.carousel.min.js"></script>
+<!-- <script src="js/owl.carousel.min.js"></script> -->
 <!-- brands carousel -->
 <script>
     $(document).ready(function() {
@@ -354,17 +285,13 @@
         itemsDesktop : [1199,3],
         itemsDesktopSmall : [979,3]
       });
-
     });
 </script>
 <!-- / brands carousel -->
 <!-- / sliders -->
-
 <!-- preloader -->
-<script src="js/preloader.js"></script>
-<!-- / preloader -->
-
+<!-- <script src="js/preloader.js"></script>
+ --><!-- / preloader -->
 <!-- / javascript -->
 </body>
-
 </html>
