--- a/app/views/template/index.html.erb
+++ b/app/views/template/index.html.erb
@@ -38,11 +38,6 @@
 
 <body>
 
-<!-- preloader -->
-<div id="preloader">
-    <div class="spinner spinner-round"></div>
-</div>
-<!-- / preloader -->
 
 <!-- header -->
 <header>
@@ -65,7 +60,7 @@
     
         <% end %>
                     
-                    <a href="shopping-cart.html"><i class="lnr lnr-cart"></i> <span>Shopping Cart (2)</span></a>
+                    <a href="/shopping-cart"><i class="lnr lnr-cart"></i> <span>Shopping Cart (2)</span></a>
                 </span>
             </p>
         </div><!-- / container -->
@@ -79,36 +74,30 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><%= image_tag('logo.png') %></a>
+                <a class="navbar-brand" href="/index"><%= image_tag('logo.png') %></a>
             </div><!-- / navbar-header -->
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="/">Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shop <span class="caret"></span></a>
                         <ul class="dropdown-menu pulse animated">
-                            <li><a href="shop-right.html">Shop: Right Sidebar</a></li>
-                            <li><a href="shop-left.html">Shop: Left Sidebar</a></li>
-                            <li><a href="shop-full.html">Shop: Full Width</a></li>
+                            <!--<li><a href="shop-right.html">Shop: Right Sidebar</a></li> -->
+                            <!--<li><a href="shop-left.html">Shop: Left Sidebar</a></li>-->
+                            <!-- <li><a href="shop-full.html">Shop: Full Width</a></li> -->
                             <li><a href="shop-filter.html">Shop: Filterable</a></li>
                             <li><a href="single-product.html">Single Product</a></li>
-                            <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                            <li><a href="checkout.html">Checkout</a></li>
+                            <li><a href="/shopping-cart">Shopping Cart</a></li>
+                            <!-- <li><a href="checkout.html">Checkout</a></li> -->
                         </ul>
                     </li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Infos <span class="caret"></span></a>
                         <ul class="dropdown-menu pulse animated">
-                            <li><a href="login-register.html">Login / Register</a></li>
                             <li><a href="my-account.html">My Account</a></li>
-                            <li><a href="single-post.html">Single Post</a></li>
                             <li><a href="faq.html">FAQ</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="404.html">404 Page</a></li>
-                            <li><a href="components.html">Components</a></li>
                         </ul>
                     </li>
                     <li class="dropdown w-image">
@@ -200,7 +189,7 @@
         <div class="row">
 
             <div class="col-sm-4 category">
-                <a href="index.html">
+                <a href="/index">
                     <div class="category-item">
                         <%= image_tag('category1.jpg') %>
                         <div class="overlay">
@@ -264,7 +253,7 @@
                 <a href="single-product.html" class="view-btn">
                     <i class="lnr lnr-eye"></i>
                 </a>
-                <a href="shopping-cart.html" class="add-to-cart">
+                <a href="/shopping-cart" class="add-to-cart">
                     <i class="lnr lnr-cart"></i>
                 </a>
             </div><!-- / product-hover-tools -->
@@ -289,7 +278,7 @@
                 <a href="single-product.html" class="view-btn">
                     <i class="lnr lnr-eye"></i>
                 </a>
-                <a href="shopping-cart.html" class="add-to-cart">
+                <a href="/shopping-cart" class="add-to-cart">
                     <i class="lnr lnr-cart"></i>
                 </a>
             </div><!-- / product-hover-tools -->
@@ -314,7 +303,7 @@
                 <a href="single-product.html" class="view-btn">
                     <i class="lnr lnr-eye"></i>
                 </a>
-                <a href="shopping-cart.html" class="add-to-cart">
+                <a href="/shopping-cart" class="add-to-cart">
                     <i class="lnr lnr-cart"></i>
                 </a>
             </div><!-- / product-hover-tools -->
@@ -339,7 +328,7 @@
                 <a href="single-product.html" class="view-btn">
                     <i class="lnr lnr-eye"></i>
                 </a>
-                <a href="shopping-cart.html" class="add-to-cart">
+                <a href="/shopping-cart" class="add-to-cart">
                     <i class="lnr lnr-cart"></i>
                 </a>
             </div><!-- / product-hover-tools -->
@@ -364,7 +353,7 @@
                 <a href="single-product.html" class="view-btn">
                     <i class="lnr lnr-eye"></i>
                 </a>
-                <a href="shopping-cart.html" class="add-to-cart">
+                <a href="/shopping-cart" class="add-to-cart">
                     <i class="lnr lnr-cart"></i>
                 </a>
             </div><!-- / product-hover-tools -->
@@ -391,7 +380,7 @@
                 <a href="single-product.html" class="view-btn">
                     <i class="lnr lnr-eye"></i>
                 </a>
-                <a href="shopping-cart.html" class="add-to-cart">
+                <a href="/shopping-cart" class="add-to-cart">
                     <i class="lnr lnr-cart"></i>
                 </a>
             </div><!-- / product-hover-tools -->
@@ -416,7 +405,7 @@
                 <a href="single-product.html" class="view-btn">
                     <i class="lnr lnr-eye"></i>
                 </a>
-                <a href="shopping-cart.html" class="add-to-cart">
+                <a href="/shopping-cart" class="add-to-cart">
                     <i class="lnr lnr-cart"></i>
                 </a>
             </div><!-- / product-hover-tools -->
@@ -441,7 +430,7 @@
                 <a href="single-product.html" class="view-btn">
                     <i class="lnr lnr-eye"></i>
                 </a>
-                <a href="shopping-cart.html" class="add-to-cart">
+                <a href="/shopping-cart" class="add-to-cart">
                     <i class="lnr lnr-cart"></i>
                 </a>
             </div><!-- / product-hover-tools -->
@@ -479,7 +468,7 @@
                     <a href="single-product.html" class="view-btn">
                         <i class="lnr lnr-eye"></i>
                     </a>
-                    <a href="shopping-cart.html" class="add-to-cart">
+                    <a href="/shopping-cart" class="add-to-cart">
                         <i class="lnr lnr-cart"></i>
                     </a>
                 </div><!-- / product-hover-tools -->
@@ -504,7 +493,7 @@
                     <a href="single-product.html" class="view-btn">
                         <i class="lnr lnr-eye"></i>
                     </a>
-                    <a href="shopping-cart.html" class="add-to-cart">
+                    <a href="/shopping-cart" class="add-to-cart">
                         <i class="lnr lnr-cart"></i>
                     </a>
                 </div><!-- / product-hover-tools -->
@@ -528,7 +517,7 @@
                     <a href="single-product.html" class="view-btn">
                         <i class="lnr lnr-eye"></i>
                     </a>
-                    <a href="shopping-cart.html" class="add-to-cart">
+                    <a href="/shopping-cart" class="add-to-cart">
                         <i class="lnr lnr-cart"></i>
                     </a>
                 </div><!-- / product-hover-tools -->
@@ -552,7 +541,7 @@
                     <a href="single-product.html" class="view-btn">
                         <i class="lnr lnr-eye"></i>
                     </a>
-                    <a href="shopping-cart.html" class="add-to-cart">
+                    <a href="/shopping-cart" class="add-to-cart">
                         <i class="lnr lnr-cart"></i>
                     </a>
                 </div><!-- / product-hover-tools -->
@@ -576,7 +565,7 @@
                     <a href="single-product.html" class="view-btn">
                         <i class="lnr lnr-eye"></i>
                     </a>
-                    <a href="shopping-cart.html" class="add-to-cart">
+                    <a href="/shopping-cart" class="add-to-cart">
                         <i class="lnr lnr-cart"></i>
                     </a>
                 </div><!-- / product-hover-tools -->
@@ -600,7 +589,7 @@
                     <a href="single-product.html" class="view-btn">
                         <i class="lnr lnr-eye"></i>
                     </a>
-                    <a href="shopping-cart.html" class="add-to-cart">
+                    <a href="/shopping-cart" class="add-to-cart">
                         <i class="lnr lnr-cart"></i>
                     </a>
                 </div><!-- / product-hover-tools -->
@@ -624,7 +613,7 @@
                     <a href="single-product.html" class="view-btn">
                         <i class="lnr lnr-eye"></i>
                     </a>
-                    <a href="shopping-cart.html" class="add-to-cart">
+                    <a href="/shopping-cart" class="add-to-cart">
                         <i class="lnr lnr-cart"></i>
                     </a>
                 </div><!-- / product-hover-tools -->
@@ -648,7 +637,7 @@
                     <a href="single-product.html" class="view-btn">
                         <i class="lnr lnr-eye"></i>
                     </a>
-                    <a href="shopping-cart.html" class="add-to-cart">
+                    <a href="/shopping-cart" class="add-to-cart">
                         <i class="lnr lnr-cart"></i>
                     </a>
                 </div><!-- / product-hover-tools -->
@@ -673,7 +662,7 @@
                     <a href="single-product.html" class="view-btn">
                         <i class="lnr lnr-eye"></i>
                     </a>
-                    <a href="shopping-cart.html" class="add-to-cart">
+                    <a href="/shopping-cart" class="add-to-cart">
                         <i class="lnr lnr-cart"></i>
                     </a>
                 </div><!-- / product-hover-tools -->
