--- a/app/views/template/index.html.erb
+++ b/app/views/template/index.html.erb
@@ -52,19 +52,7 @@
                 <span class="left">Free Worldwide shipping on orders over <span class="text-primary"><strong>$100</strong></span>!</span>
                 <span class="right">
                     <a href="my-account.html"><i class="lnr lnr-user"></i> <span>My Account</span></a>
-    <% if user_signed_in? %>
-        <%= link_to "Sign Out  ", destroy_user_session_path, method: :delete %>
-        <%= current_user.email %>
-
-    <% else %>
-    
-        <%= link_to "Sign In      ", new_user_session_path %>
-
-
-        <%= link_to "Sign Up", new_user_registration_path %>
-    
-        <% end %>
-                    
+                    <a href="login-register.html"><i class="lnr lnr-lock"></i> <span>Login / Register</span></a>
                     <a href="shopping-cart.html"><i class="lnr lnr-cart"></i> <span>Shopping Cart (2)</span></a>
                 </span>
             </p>
@@ -79,11 +67,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><%= image_tag('logo.png') %></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt=""></a>
             </div><!-- / navbar-header -->
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shop <span class="caret"></span></a>
                         <ul class="dropdown-menu pulse animated">
@@ -92,7 +80,7 @@
                             <li><a href="shop-full.html">Shop: Full Width</a></li>
                             <li><a href="shop-filter.html">Shop: Filterable</a></li>
                             <li><a href="single-product.html">Single Product</a></li>
-                            <li><a href="shopping-cart.html">Shopping Cart</a></li>
+                            <li class="active"><a href="shopping-cart.html">Shopping Cart</a></li>
                             <li><a href="checkout.html">Checkout</a></li>
                         </ul>
                     </li>
@@ -112,13 +100,13 @@
                         </ul>
                     </li>
                     <li class="dropdown w-image">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag('eng.png') %> <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="images/eng.png" alt=""> <span class="caret"></span></a>
                         <ul class="dropdown-menu pulse animated">
-                            <li><a href="#"><%= image_tag('fr.png') %> FR</a></li>
-                            <li><a href="#"><%= image_tag('de.png') %> DE</a></li>
-                            <li><a href="#"><%= image_tag('es.png') %> ES</a></li>
+                            <li><a href="#"><img src="images/fr.png" alt=""> FR</a></li>
+                            <li><a href="#"><img src="images/de.png" alt=""> DE</a></li>
+                            <li><a href="#"><img src="images/es.png" alt=""> ES</a></li>
                         </ul>
-                    </li>    
+                    </li>
                 </ul>
             </div><!--/ nav-collapse -->
         </div><!-- / container -->
@@ -126,7 +114,7 @@
 
     <div id="header-sliders">
         <!-- slider -->
-        <div id="slider" class="carousel slide">  
+        <div id="slider" class="carousel slide">
             <div class="carousel-inner">
 
                 <!-- slide 1 -->
@@ -454,7 +442,7 @@
         </div>
         <!-- / item -->
 
-        
+
     </div> <!-- / products-carousel -->
 </section>
 <!-- / featured-products -->
