--- a/app/views/template/index.html.erb
+++ b/app/views/template/index.html.erb
@@ -101,11 +101,11 @@
                         </ul>
                     </li>
                     <li class="dropdown w-image">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="images/eng.png" alt=""> <span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= image_tag('eng.png') %><span class="caret"></span></a>
                         <ul class="dropdown-menu pulse animated">
-                            <li><a href="#"><img src="images/fr.png" alt=""> FR</a></li>
-                            <li><a href="#"><img src="images/de.png" alt=""> DE</a></li>
-                            <li><a href="#"><img src="images/es.png" alt=""> ES</a></li>
+                          <li><a href="#"><%= image_tag('fr.png') %> FR</a></li>
+                          <li><a href="#"><%= image_tag('de.png') %> DE</a></li>
+                          <li><a href="#"><%= image_tag('es.png') %> ES</a></li>
                         </ul>
                     </li>
                 </ul>
